--- a/lib/package.json
+++ b/lib/package.json
@@ -24,6 +24,7 @@
     "build": "npm run build:esm && npm run build:bundle && npm run lint && npm run docs",
     "build:esm": "grunt dynamicproto",
     "build:bundle": "rollup -c rollup.config.js",
+    "rebuild": "npm run build",
     "test": "grunt dynamicprototest",
     "lint": "tslint -p tsconfig.json",
     "docs": "typedoc --out ./docs ./src --excludePrivate --excludeProtected --tsconfig tsconfig.json --theme minimal"
@@ -38,25 +39,29 @@
   "homepage": "https://github.com/microsoft/DynamicProto-JS#readme",
   "license": "MIT",
   "sideEffects": false,
+  "dependencies": {
+  },
   "devDependencies": {
     "@microsoft/applicationinsights-rollup-es3" : "^1.0.1",
     "@microsoft/dynamicproto-rollup": "1.0.0",
-    "grunt": "^1.0.1",
+    "grunt": "^1.4.1",
     "grunt-cli": "^1.3.2",
-    "grunt-contrib-qunit": "^3.1.0",
-    "grunt-contrib-uglify": "^3.1.0",
+    "grunt-contrib-qunit": "^4.0.0",
+    "grunt-contrib-uglify": "^5.0.1",
     "grunt-run": "^0.8.1",
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-tslint": "^5.0.2",
     "tslint": "^5.19.0",
-    "tslint-microsoft-contrib": "^5.2.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "3.7.2",
-    "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-uglify": "^6.0.0",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "^3.7.2",
+    "typedoc": "^0.20.36",
+    "rollup-plugin-copy": "^3.4.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "rollup-plugin-cleanup": "3.2.1",
     "rollup-plugin-minify-es": "^1.1.1",
-    "rollup": "^1.27.2"
+    "rollup": "^2.32.0",
+    "uglify-js": "^3.13.7"
   }
 }
