--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "doc": "lib/docs"
   },
   "scripts": {
-    "travisinit": "node common/scripts/install-run-rush.js update --recheck --full",
+    "postinstall": "node common/scripts/install-run-rush.js update",
     "build": "node common/scripts/install-run-rush.js rebuild",
     "test": "grunt dynamicprototest",
     "rollup": "grunt rollup",
@@ -35,19 +35,23 @@
     "url": "https://github.com/microsoft/DynamicProto-JS/issues"
   },
   "homepage": "https://github.com/microsoft/DynamicProto-JS#readme",
+  "dependencies": {},
   "devDependencies": {
-    "grunt": "~1.0.1",
+    "grunt": "^1.4.1",
     "grunt-cli": "^1.3.2",
-    "grunt-contrib-qunit": "^3.1.0",
-    "grunt-contrib-uglify": "^3.1.0",
+    "grunt-contrib-qunit": "^4.0.0",
+    "grunt-contrib-uglify": "^5.0.1",
     "grunt-run": "^0.8.1",
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-tslint": "^5.0.2",
-    "rollup": "^1.27.2",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "rollup-plugin-cleanup": "3.2.1",
+    "rollup": "^2.32.0",
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-microsoft-contrib": "^5.2.1",
-    "typedoc": "^0.15.1",
-    "typescript": "3.7.2"
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typedoc": "^0.20.36",
+    "typescript": "^3.7.2"
   }
 }
