Policy requirement: Stop using grunt-ts due to dependant vulnerability issues

--- a/rollup/tsconfig.json
+++ b/rollup/tsconfig.json
@@ -11,8 +11,7 @@
     "noEmitHelpers": false,
     "alwaysStrict": true,
     "declaration": true,
-    "outDir": "./out",
-    "rootDir": "./",
+    "outDir": "./out/rollup/src",
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true
   },
