--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run ci-install
+    - run: node common/scripts/install-run-rush.js check && node common/scripts/install-run-rush.js update
     - run: npm run build --verbose
       timeout-minutes: 10
     - run: npm run test --verbose
