--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -11,8 +11,7 @@
       "noEmitHelpers": false,
       "alwaysStrict": true,
       "declaration": true,
-      "outDir": "./out",
-      "rootDir": "./",
+      "outDir": "./out/lib/src",
       "suppressImplicitAnyIndexErrors": true,
       "allowSyntheticDefaultImports": true
     },
