--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "doc": "lib/docs"
   },
   "scripts": {
-    "ci-install": "node common/scripts/install-run-rush.js update",
+    "ci-install": "node common/scripts/install-run-rush.js check && node common/scripts/install-run-rush.js update",
     "build": "node common/scripts/install-run-rush.js rebuild",
     "test": "grunt dynamicprototest",
     "rollup": "grunt rollup",
+    "rupdate": "node common/scripts/install-run-rush.js update --recheck --purge --full",
     "docs": "typedoc --out docs lib/src --excludePrivate --excludeProtected --tsconfig lib/tsconfig.json --theme minimal"
   },
   "repository": {
@@ -42,7 +43,7 @@
     "grunt-contrib-qunit": "^4.0.0",
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-run": "^0.8.1",
-    "grunt-ts": "^6.0.0-beta.22",
+    "@nevware21/grunt-ts-plugin": "^0.2.2",
     "grunt-tslint": "^5.0.2",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
@@ -52,6 +53,6 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "typedoc": "^0.20.36",
-    "typescript": "^3.7.2"
+    "typescript": "^3.9.9"
   }
 }
