--- a/rollup/package.json
+++ b/rollup/package.json
@@ -38,13 +38,13 @@
     "grunt-contrib-qunit": "^4.0.0",
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-run": "^0.8.1",
-    "grunt-ts": "^6.0.0-beta.22",
+    "@nevware21/grunt-ts-plugin": "^0.2.2",
     "grunt-tslint": "^5.0.2",
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
     "typedoc": "^0.20.36",
-    "typescript": "^3.7.2",
+    "typescript": "^3.9.9",
     "rollup-plugin-copy": "^3.4.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
