Task 26377610: [DynamicProto] Investigate possible security issue with prototype pollution

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "fullClean": "git clean -xdf && npm install && rush update --recheck --purge --full",
     "fullCleanBuild": "npm run fullClean && npm run build",
     "npm_pack": "copyfiles README.md LICENSE lib && cd lib && npm pack",
-    "npm_publish": "cd lib && node ../tools/release-tools/npm_publish.js ."
+    "npm_publish": "cd lib && node ../tools/release-tools/npm_publish.js .",
+    "serve": "grunt serve"
   },
   "repository": {
     "type": "git",
@@ -41,7 +42,7 @@
   },
   "homepage": "https://github.com/microsoft/DynamicProto-JS#readme",
   "dependencies": {
-    "@nevware21/ts-utils": ">= 0.9.4 < 2.x"
+    "@nevware21/ts-utils": ">= 0.10.4 < 2.x"
   },
   "devDependencies": {
     "@microsoft/rush": "5.82.1",
@@ -57,6 +58,7 @@
     "eslint-plugin-security": "^1.4.0",
     "grunt": "^1.5.3",
     "grunt-cli": "^1.4.3",
+    "grunt-contrib-connect": "^3.0.0",
     "grunt-contrib-qunit": "^4.0.0",
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-run": "^0.8.1",
