--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Update rush shrinkwrap dependencies (for different node versions)
+      run: node common/scripts/install-run-rush.js update --full
+    - run: npm install rollup -g
+    - run: npm install grunt-cli
     - run: npm install
     - run: node common/scripts/install-run-rush.js check && node common/scripts/install-run-rush.js update
     - run: npm run build --verbose
